...
  "generationSubmissionSelectMoment": "拍摄或选择照片",
  "generationSubmissionProcessedResultImageLoadFailed": "处理后的结果图无法加载",
  "generationSubmissionResultImageLoadFailed": "结果图无法加载",
  "generationSubmissionOriginalImageLoadFailed": "原图无法加载",
  "generationSubmissionTapToLoadResult": "轻点加载结果",
  "generationSubmissionStatusGenerationFailed": "生成失败",
  "generationSubmissionStatusWaitingForConfirmation": "等待确认",
  "generationSubmissionStatusPreparingUploadImage": "正在准备上传图片",
  "generationSubmissionStatusProcessingResultImage": "正在处理结果图",
  "generationSubmissionStatusResultSaved": "结果已保存",
  "generationSubmissionStatusResultProcessingFailed": "结果处理失败",
  "generationSubmissionStatusWaitingForGenerationResult": "等待生成结果",
  "generationSubmissionStatusPreparingGenerationTask": "正在准备生成任务",
  "generationSubmissionConfirmationGuideMessage": "每张照片优化将消耗2积分，确认后需要等待约1分钟。期间你可以退出app，完成后会通过通知提醒",
  "generationSubmissionEstimatedProgressPercent": "{percent}%",
  "@generationSubmissionEstimatedProgressPercent": {
...
